WordPress_+_logging_v3: jenkins: pom.xml updated